--- a/app/sass/_global/variables.scss
+++ b/app/sass/_global/variables.scss
@@ -36,6 +36,7 @@ $color-dkorange: #ff6666; // dark peach
 $color-teal: #A1DBB2; // teal
 $color-facebook: #3b5998 ; // facebook blue
 $color-google: #dd4b39; // red
+$light-orange: #ffe4b2 ; // light orange
 
 // Color Usage
 
