Work in progress upload image module html and sass

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -9,6 +9,7 @@
 @import '_component/home';
 @import '_component/results';
 @import '_component/user_profile_subnav';
+@import '_component/user_upload_gallery';
 
 // layouts
 @import '_layout/grid';
