--- a/app/sass/_component/user_profile_subnav.sass
+++ b/app/sass/_component/user_profile_subnav.sass
@@ -14,50 +14,52 @@
 
 //  Profile Navigation
 
-body
-
 // logo
+// #user-menu
+//   justify-content: flex-start
+//   border: em(1px) solid blue
 
-#userMenu
-  @include flexbox
-  border: 1px solid red
+// .small-nav
+//   @include flexbox
+//   border: em(1px) solid red
 
-.small-nav
-  justify-content: flex-start
 
-.small-logo
-  margin-left: em(10px)
-  margin-top: em(5px)
+// .small-logo
+//   margin: em(15px) em(15px)
+//   border: em(1px) solid red
 
-img[data-id="profile-logo"]
-  padding-top: em(10px)
-  width: em(150px)
+// img[data-id="profile-logo"]
+//   padding-top: em(10px)
+//   width: 100px
 
-// logout button
+// // logout button
+// .logout
 
-button[name="logout-btn"]
-  align-self: flex-end
+// button[name="logout-btn"]
+//   border: em(1px) solid red
+
 
 // user's name greeting section
 
-.greeting
-  display: block
-  font-size: $base__subhead
-  color: $color-drkgrey
-  font-weight: $font-weight--normal
-  text-align: center
-  padding: 0
-  margin: 0
+// .greeting
+//   @include flexbox
+
+// section[name"user-profile"]
+//   font-size: $base__subhead
+//   color: $color-drkgrey
+//   font-weight: $font-weight--normal
+//   text-align: center
+//   width: 100%
 
 
 // left sub nav
 
 .sub-nav
   @include flexbox
+  justify-content: space-between
 
 .sub-container
-  justify-content: flex-start
-  width: 300px
+  flex-basis: em(300px)
 
 .user-event,
 .user-activity
@@ -65,7 +67,7 @@ button[name="logout-btn"]
 
 .profile,
 .events
-  margin-right: 10px
+  margin-right: em(10px)
   padding: em(20px) 0px em(20px) em(20px)
   background-color: $color-primary
   li
@@ -123,7 +125,6 @@ p[data-type="e-title"]
 .view-profile
   width: 100%
   justify-content: flex-start
-  border-top: $border_ltgrey
 
 section[class="user-info"]
   padding: em(10px) 0 em(10px) 0
@@ -156,6 +157,7 @@ p[class="activity"]
   flex-wrap: wrap
   align-items: flex-start
   border-top: $border_ltgrey
+  margin-right: em(20px)
 
 .gallery-title,
 .activity-title
