--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -9,9 +9,11 @@
 @import '_component/home';
 @import '_component/results';
 @import '_component/user_profile_subnav';
+@import '_component/_search_form';
 
 // layouts
 @import '_layout/grid';
+
 // mixins
 @import '_mixin/vertical-align-mixin';
 @import '_mixin/clearfix-mixin';
@@ -21,5 +23,6 @@
 @import '_mixin/transition-mixin';
 @import '_mixin/transform-mixin';
 //@import '_mixin/icons-mixin';
+
 // utility
 @import '_utility/em-function';
