--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -9,7 +9,7 @@
 @import '_component/home';
 @import '_component/results';
 @import '_component/user_profile_subnav';
-@import '_component/_search_form';
+@import '_component/search_form';
 
 // layouts
 @import '_layout/grid';
