--- a/app/js/templates/user_profile.html
+++ b/app/js/templates/user_profile.html
@@ -1,89 +1,43 @@
-<link rel="stylesheet" type="text/css" href="sass/style.css" />
-
-<body>
-  <!-- sub nav container -->
-  <div class="sub-nav">
-    <aside class="sub-container">
-    <!-- permanent sub nav -->
-      <ul class="profile">
-        <h4 data-type="profile-header">Your Profile<h4>
-        <li><a class="user-event" href="#">Create Event</a></li>
-        <li><a class="user-activity" href="#">View Activity</a></li>
-      </ul>
-      <!-- dynamic sub nav -->
-      <ul class="events">
-        <h4 data-type="profile-header">Your Events</h4>
-        <li>
-          <a class="new-event" href="#">{{ Event 1 }}</a>
-          <p data-type="e-title">{{ Event Title Pulled Here...}}
-        </li>
-        <li>
-          <a class="new-event" href="#">{{ Event 2 }}</a>
-          <p data-type="e-title">{{ Event Title Pulled Here...}}
-        </li>
-        <li>
-          <a class="new-event" href="#">{{ Event 3 }}</a>
-          <p data-type="e-title">{{ Event Title Pulled Here...}}
-        </li>
-        <li>
-          <a class="new-event" href="#">{{ Event 4 }}</a>
-          <p data-type="e-title">{{ Event Title Pulled Here...}}
-        </li>
-      </ul>
-    </aside>
-    <!-- user profile info bar -->
-    <aside class="view-profile">
-        <section class="user-info">
-          <h4>Your Profile</h4>
-          <ol data-type="user-details">
-            <li>Name: {{ Jake Xyz }}</a></li>
-            <li>Email: {{ jake@gmail.com }}</a></li>
-          </ol>
-        </section>
-      <!-- gallery 1 -->
-      <article class="activity-log">
-        <h4 class="activity-title">Your Recent Activities</h4>
-        <p class="activity">{{You Added Event to Calendar}}</p>
-        <p class="activity">{{You Edited Event}}</p>
-        <p class="activity">{{You Created New Event}}</p>
-        </section>
-      </article>
-      <article class="view-event">
-        <h4 class="gallery-title">{{Event Title 1}}</h4>
-        <h5 data-type="edit-event"><a href="">Edit Event</a></h5>
-        <section class="gallery-grid">
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-        </section>
-      </article>
-      <!-- gallery 2 -->
-      <article class="view-event">
-        <h4 class="gallery-title">{{Event Title 1}}</h4>
-        <h5 data-type="edit-event"><a href="">Edit Event</a></h5>
-        <section class="gallery-grid">
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-        </section>
-      </article>
-
-    </aside>
-  </div>
-
-  </body>
-</html>
+<!-- sub nav container -->
+<div class="sub-nav" data-ng-controller="ProfileController">
+  <aside class="sub-container">
+  <!-- permanent sub nav -->
+    <ul class="profile">
+      <h4 data-type="profile-header">Your Profile<h4>
+      <li><a class="user-event" href="#">Create Event</a></li>
+      <li><a class="user-activity" data-ng-click="scrollTo('activity-log')">View Activity</a></li>
+    </ul>
+    <!-- dynamic sub nav -->
+    <ul class="events">
+      <h4 data-type="profile-header">Your Events</h4>
+      <li ng-repeat="sale in sales">
+        <a class="new-event" data-ng-click="scrollTo('sale'+ ($index+1))">Event {{$index + 1}}</a>
+        <p data-type="e-title">{{sale.title}}</p>
+      </li>
+    </ul>
+  </aside>
+  <!-- user profile info bar -->
+  <aside class="view-profile">
+      <section class="user-info">
+        <h4>Your Profile</h4>
+        <ol data-type="user-details">
+          <li>Name: {{user.firstName}} {{user.lastName}}</li>
+          <li>Email: {{user.basic.email}}</li>
+        </ol>
+      </section>
+    <!-- gallery 1 -->
+    <article id="activity-log" class="activity-log">
+      <h4 class="activity-title">Your Recent Activities</h4>
+      <div ng-repeat="activity in activities">
+      <p class="activity">{{activity}}</p>
+      </div>
+      </section>
+    </article>
+    <article class="view-event" ng-repeat="sale in sales">
+      <h4 class="gallery-title" id="sale{{$index+1}}">{{sale.title}}</h4>
+      <h5 data-type="edit-event"><a href="">Edit Event</a></h5>
+      <section class="gallery-grid" ng-repeat="item in sale.items">
+        <img src={{item.thumbnailUrl}} class="e-gallery" ng-init="getItemThumbnail(item)"></img>
+      </section>
+  </aside>
+</div>
