--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -2,6 +2,7 @@
 @import '_global/base'
 @import '_global/variables'
 @import '_global/normalize'
+@import '_global/icons'
 // components
 @import '_component/buttons'
 @import '_component/modal'
