--- a/app/sass/_component/user_profile_subnav.sass
+++ b/app/sass/_component/user_profile_subnav.sass
@@ -5,7 +5,7 @@
 @import '../_mixin/border-radius-mixin'
 @import '../_utility/em-function'
 @import '../_mixin/transition-mixin'
-@import '../_mixin/transform-mixin'
+//@import '../_mixin/transform-mixin'
 
 *
   -webkit-box-sizing: border-box
