--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -2,6 +2,7 @@
 @import '_global/base';
 @import '_global/variables';
 @import '_global/normalize';
+@import '_global/icons'
 
 // components
 @import '_component/buttons';
@@ -9,8 +10,14 @@
 @import '_component/home';
 @import '_component/results';
 @import '_component/user_profile_subnav';
+@import '_component/error1'
+@import '_component/error2'
+@import '_component/error3'
+@import '_component/error4'
 @import '_component/search_form';
+@import '_component/photo_enlarge'
 @import '_component/user_upload_gallery';
+@import '_component/user_form'
 
 // layouts
 @import '_layout/grid';
@@ -23,7 +30,6 @@
 @import '_mixin/border-radius-mixin';
 @import '_mixin/transition-mixin';
 @import '_mixin/transform-mixin';
-//@import '_mixin/icons-mixin';
 
 // utility
 @import '_utility/em-function';
