--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -2,7 +2,7 @@
 @import '_global/base';
 @import '_global/variables';
 @import '_global/normalize';
-@import '_global/icons'
+@import '_global/icons';
 
 // components
 @import '_component/buttons';
@@ -10,14 +10,14 @@
 @import '_component/home';
 @import '_component/results';
 @import '_component/user_profile_subnav';
-@import '_component/error1'
-@import '_component/error2'
-@import '_component/error3'
-@import '_component/error4'
+@import '_component/error1';
+@import '_component/error2';
+@import '_component/error3';
+@import '_component/error4';
 @import '_component/search_form';
-@import '_component/photo_enlarge'
+@import '_component/photo_enlarge';
 @import '_component/user_upload_gallery';
-@import '_component/user_form'
+@import '_component/user_form';
 
 // layouts
 @import '_layout/grid';
