--- a/app/sass/_global/base.sass
+++ b/app/sass/_global/base.sass
@@ -12,11 +12,12 @@
   clear: both
 body
   height: 100%
-  overflow: scroll
+  overflow-y: scroll
   font-family: $font-family--primary
   font-size: 100%
   line-height: 1.25
   margin: 0
+  padding: 0 2%
   display: flex
   flex-direction: column
 ul, ol
