--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -8,6 +8,7 @@
 @import '_component/buttons';
 @import '_component/modal';
 @import '_component/home';
+@import '_component/footer';
 @import '_component/results';
 @import '_component/user_profile_subnav';
 @import '_component/error1';
