--- a/app/js/templates/user_profile.html
+++ b/app/js/templates/user_profile.html
@@ -4,7 +4,7 @@
   <!-- permanent sub nav -->
     <ul class="profile">
       <h4 data-type="profile-header">Your Profile<h4>
-      <li><a class="user-event" href="#">Create Event</a></li>
+      <li><a class="user-event" data-ng-click="create()">Create Event</a></li>
       <li><a class="user-activity" data-ng-click="scrollTo('activity-log')">View Activity</a></li>
     </ul>
     <!-- dynamic sub nav -->
