--- a/app/js/templates/user_upload_gallery.html
+++ b/app/js/templates/user_upload_gallery.html
@@ -1,60 +1,51 @@
-<link rel="stylesheet" type="text/css" href="sass/style.css" />
-
-<body>
-
-  <!-- sub nav container -->
-  <div class="sub-nav">
-    <aside class="sub-container">
-    <!-- permanent sub nav -->
-      <ul class="profile">
-        <h4 data-type="profile-header">Your Profile<h4>
-        <li><a class="user-event" href="#">Create Event</a></li>
-        <li><a class="user-activity" href="#">View Activity</a></li>
-      </ul>
-      <!-- dynamic sub nav -->
-      <ul class="events">
-        <h4 data-type="profile-header">Your Events</h4>
-        <li>
-          <a class="new-event" href="#">{{ Event 1 }}</a>
-          <p data-type="e-title">{{ Event Title Pulled Here...}}
-        </li>
-        <li>
-          <a class="new-event" href="#">{{ Event 2 }}</a>
-          <p data-type="e-title">{{ Event Title Pulled Here...}}
-        </li>
-        <li>
-          <a class="new-event" href="#">{{ Event 3 }}</a>
-          <p data-type="e-title">{{ Event Title Pulled Here...}}
-        </li>
-        <li>
-          <a class="new-event" href="#">{{ Event 4 }}</a>
-          <p data-type="e-title">{{ Event Title Pulled Here...}}
-        </li>
-      </ul>
-    </aside>
-    <!-- user profile info bar -->
-    <aside class="view-profile">
-      <article class="view-event">
-        <h4 class="image-drop">Drag and Upload Images</h4>
-        <section class="drop-images">
-          <div class="drop-box"></div>
-        </section>
-      </article>
-      <!-- gallery 2 -->
-      <article class="view-thumbnails">
+<div class="sub-nav" data-ng-controller="NewSale">
+  <aside class="sub-container">
+  <!-- permanent sub nav -->
+    <ul class="profile">
+      <h4 data-type="profile-header">Your Profile<h4>
+      <li><a class="user-event" href="#">Create Event</a></li>
+      <li><a class="user-activity" href="#">View Activity</a></li>
+    </ul>
+    <!-- dynamic sub nav -->
+    <ul class="events">
+      <h4 data-type="profile-header">Your Events</h4>
+      <li>
+        <a class="new-event" href="#">{{ Event 1 }}</a>
+        <p data-type="e-title">{{ Event Title Pulled Here...}}
+      </li>
+      <li>
+        <a class="new-event" href="#">{{ Event 2 }}</a>
+        <p data-type="e-title">{{ Event Title Pulled Here...}}
+      </li>
+      <li>
+        <a class="new-event" href="#">{{ Event 3 }}</a>
+        <p data-type="e-title">{{ Event Title Pulled Here...}}
+      </li>
+      <li>
+        <a class="new-event" href="#">{{ Event 4 }}</a>
+        <p data-type="e-title">{{ Event Title Pulled Here...}}
+      </li>
+    </ul>
+  </aside>
+  <!-- user profile info bar -->
+  <aside class="view-profile">
+    <article class="view-event">
+      <h4 class="image-drop">Drag and Upload Images</h4>
+      <section class="drop-images">
+        <div ng-file-drop ng-model="myFiles" drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}" ng-multiple="false" allow-dir="true" accept="image/*,*pdf" ng-file-change="upload()"> Drop Images or PDFs<div>here</div>
+        </div>
+      </section>
+    </article>
+    <!-- gallery 2 -->
+    <article class="view-thumbnails">
 <!--       <h5 data-type="left-right"><a href="">Edit Event</a></h5> -->
-        <section class="gallery-thumbnails">
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-          <div class="e-gallery"></div>
-        </section>
-      </article>
-
-
-    </aside>
-  </div>
-
-  </body>
-</html>
+      <section class="gallery-thumbnails">
+        <div class="e-gallery"></div>
+        <div class="e-gallery"></div>
+        <div class="e-gallery"></div>
+        <div class="e-gallery"></div>
+        <div class="e-gallery"></div>
+      </section>
+    </article>
+  </aside>
+</div>
