add one more item in item_route test, fix user profile

--- a/app/js/templates/user_profile.html
+++ b/app/js/templates/user_profile.html
@@ -21,7 +21,7 @@
       <section class="user-info">
         <h4>Your Profile</h4>
         <ol data-type="user-details">
-          <li>Name: {{user.firstName}} {{user.lastName}}</li>
+          <li>Name: {{user.firstName}}</li>
           <li>Email: {{user.basic.email}}</li>
         </ol>
       </section>
