refactor user pages architecture and styling

--- a/app/js/templates/user_add_new_sale_form.html
+++ b/app/js/templates/user_add_new_sale_form.html
@@ -69,7 +69,7 @@
    <!-- link "upload photos next" -->
   <section>
   <label for="user_form_footer">
-    <a href="#">UPLOAD PHOTOS NEXT (right arrow)</a>
+    <a data-ng-click="changeDirective('uploadGallery')">UPLOAD PHOTOS NEXT (right arrow)</a>
   </label>
   </section>
 </form>
