--- a/app/js/templates/home.html
+++ b/app/js/templates/home.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="UserController"  data-ng-class="{mdoverlay: loginModalShown||signupModalShown}" data-ng-click="toggleModal()">
   <!-- Log In Modal 1 -->
-  <div data-modal-login data-ng-if="loginModalShown" data-ng-blur="close()" >
+  <div data-modal-login data-ng-if="loginModalShown" >
   </div>
     <!-- Sign Up Modal 2 -->
   <div data-modal-signup data-ng-if="signupModalShown" >
