--- a/app/sass/_component/photo_enlarge.sass
+++ b/app/sass/_component/photo_enlarge.sass
@@ -14,8 +14,8 @@ body[class="photo_enlarge"]
   background-color: white
   width: em(450px)
   position: relative
-  left: 0
-  top: calc(50% - 600px/2)
+  left: 30%
+  top: -3%
   display: block
   padding: em(15px) em(20px)
   margin: em(60px) 0
@@ -44,8 +44,8 @@ label[for="image-condition"],
   font-weight: $font-weight--bold
 
 //input field setting
-input[name="image-description"],
-input[name="image-title"],
+input[id="image-description"],
+input[id="image-title"],
   height: em(30px)
   width: 100%
   padding: em(5px)
