edited error1-4 pages. now all consolidated to error.sass

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -11,14 +11,12 @@
 @import '_component/footer';
 @import '_component/results';
 @import '_component/user_profile_subnav';
-@import '_component/error1';
-@import '_component/error2';
-@import '_component/error3';
-@import '_component/error4';
+@import '_component/error';
 @import '_component/search_form';
 @import '_component/photo_enlarge';
 @import '_component/user_upload_gallery';
 @import '_component/user_form';
+@import '_component/sticky_bar';
 
 // layouts
 @import '_layout/grid';
