fix image upload

--- a/app/js/templates/item_details.html
+++ b/app/js/templates/item_details.html
@@ -1,7 +1,7 @@
 <div class="photo_enlarge mdoverlay" >
   <form class="viewphoto photoModal">
     <!-- image -->
-    <img src="img/sample_sale.png" alt="{{image01}}"><br>
+    <img data-ng-src="{{image.url}}" alt="{{image.alt}}"><br>
     <!-- form -->
     <ol>
       <!-- title of the image -->
