--- a/app/sass/_component/user_upload_gallery.sass
+++ b/app/sass/_component/user_upload_gallery.sass
@@ -20,8 +20,8 @@
 .drop-box
   background-color: $color-font-primary
   @include border-radius(5px)
-  height: 275px
-  width: 450px
+  height: 100%
+  width: 100%
   margin: auto
 
 .view-thumbnails
