add view-event.html and view-event.sass, updated base, and style.scss

--- a/app/sass/_component/footer.sass
+++ b/app/sass/_component/footer.sass
@@ -1,5 +1,6 @@
 @import '../_utility/em-function'
 @import '../_mixin/flexbox-mixin'
+@import '../_global/variables'
 
 #footer
   margin-top: em(200px)
