--- a/app/sass/_component/home.sass
+++ b/app/sass/_component/home.sass
@@ -1,5 +1,6 @@
 @import '../_mixin/flexbox-mixin'
 @import '../_utility/em-function'
+@import '../_global/variables'
 
 #main-app-header
 	//flex child of body
