--- a/app/sass/_component/search_form.sass
+++ b/app/sass/_component/search_form.sass
@@ -1,5 +1,6 @@
 @import '../_mixin/input-placeholder-mixin'
 @import '../_utility/em-function'
+@import '../_global/variables'
 
 // search bar
 .search-container
