--- a/app/sass/_component/modal.sass
+++ b/app/sass/_component/modal.sass
@@ -24,7 +24,10 @@
 .headModal
   display: block
   text-transform: uppercase
-  text-align: center
+
+.loginModal
+  li
+    text-align: left
 
 li[data-id="login-user"],
 li[data-id="new-user"]
