add functionality for view event and view item

--- a/app/js/templates/search_results.html
+++ b/app/js/templates/search_results.html
@@ -24,7 +24,7 @@
     <tr data-ng-click="relocate($event, sale.lat, sale.lng)">
       <td class="results" colspan="3">
         <ol name="event" data-type="event-info">
-          <h4 id="redirectSale" data-ng-click="redirectSale()" style="cursor:pointer; text-decoration: underline;">{{sale.title}}</h4>
+          <h4 id="redirectSale" data-ng-click="redirectSale(sale._id)" style="cursor:pointer; text-decoration: underline;">{{sale.title}}</h4>
           <li><strong>Location: </strong>{{sale.address}}</li>
           <li><time datetime><strong>Date: </strong>{{(sale.dateStart  | date : 'mediumDate') + ' - ' + (sale.dateEnd  | date : 'mediumDate')}}</time></li>
           <li><time datetime><strong>Time: </strong>{{(sale.timeStart  | date : 'shortTime') + ' - ' + (sale.timeEnd  | date : 'shortTime')}}</time></li>
